# BrainVC

./: .gitignore  ARCHITECTURE.md  DECISIONS.md  DEMO.md  LOVABLE_PROMPT.md  ONBOARDING.md  OPEN_QUESTIONS.md  PITCH_DECK.html  README.md  REAL_DECKS.md  RESEARCH.md  render.yaml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/api/: deps.py  main.py  routes.py
backend/app/contracts/: claims.py  entities.py  enums.py  evidence.py  memo.py  scores.py  signals.py  thesis.py  trace.py
backend/app/extraction/: extractor.py
backend/app/ingestion/: entity_resolution.py  ingestor.py
backend/app/llm/: client.py  config.py
backend/app/memo/: composer.py  voice.py
backend/app/memory/: db.py  repositories.py  tables.py
backend/app/pipeline/: orchestrator.py
backend/app/scoring/axes/: scorers.py
backend/app/scoring/calibration/: heuristic.py
backend/app/scoring/cold_start/: scorer.py
backend/app/screening/: gate.py
backend/app/sourcing/: registry.py
backend/app/thesis/: provider.py
backend/app/trace/: logger.py
backend/app/validation/: external.py  validator.py
backend/research/: backtest.py
backend/research/results/: backtest_results.json
backend/seeds/: demo_snapshot.db  seed_demo.py  seed_real.py
backend/seeds/decks/: brainvc.md  dataforge.md  greengrid.md  medloop.md  nimbusops.md  promptpantry.md  quantumyield.md  real_airbnb_2008.md  real_buffer_2011.md  real_coinbase_2012.md  real_ubercab_2008.md  shelfsense.md  vectorhive.md
backend/tests/: conftest.py  test_contracts.py  test_extraction.py  test_ingest.py
(+21 files in other folders)
