[project]
name = "brainvc-backend"
version = "0.1.0"
description = "BrainVC — The VC Brain (Hack-Nation, Maschmeyer Group challenge)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.9",
    "sqlalchemy>=2.0",
    "pypdf>=5.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "openai>=1.60",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.uv]
package = false
